--- a/public/css/IOD.css
+++ b/public/css/IOD.css
@@ -1,6 +1,7 @@
 body{
   margin: 0;
   text-align: center;
+  background-color: #F8F4EA;
 }
 
 .header{
@@ -20,7 +21,8 @@ body{
 }
 
 /***************** Middile Container  *********************/
-.middile{
+.middile-Container{
+  align-items: center;
   margin-top: 0;
   padding: 20px;
   background-color: #F8F4EA;
@@ -36,7 +38,7 @@ body{
 }
 
 .aboutImage{
-  margin-top: 20px;
+  margin: 30px 0 20px;;
   padding: 20px;
   background-color: #D8D9CF;
   margin-left:16%;
@@ -44,6 +46,8 @@ body{
 }
 
 .about-text{
+  margin:10px 0;
+  font-family: 'Noto Sans', sans-serif;
   font-size: 1.5rem;
   text-align: justify;
 }
@@ -52,4 +56,27 @@ body{
   font-family: 'Ubuntu', sans-serif;
   padding: 15px;
   background-color:#205295;
+}
+
+.previous-day{
+  background-color: #F8F4EA;
+  align-items: center;
+}
+.input{
+  width: 20%;
+  text-align: center;
+  background-color: #f7ffff;
+}
+
+.input-div{
+  margin: 20px;
+  display: flex;
+justify-content: center;
+align-items: center;
+}
+
+.label{
+  margin: 30px 30px 10px;
+  font-family:  'Work Sans', sans-serif;
+  font-size: 1.5rem;
 }
