--- a/views/IOD.ejs
+++ b/views/IOD.ejs
@@ -1,26 +1,48 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <title>Image of the day</title>
-    <link rel="stylesheet" href="css/IOD.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Merriweather&family=Mochiy+Pop+One&family=Montserrat:wght@300;400;900&family=Sacramento&family=Ubuntu&display=swap" rel="stylesheet">
-  </head>
-  <body>
-      <div class="header">
-           <h1 id="heading">Nasa Image of the day</h1>
+
+<head>
+  <meta charset="utf-8">
+  <title>Image of the day</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+  <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@400;700&family=Merriweather&family=Mochiy+Pop+One&family=Montserrat:wght@300;400;900&family=Noto+Sans&family=Sacramento&family=Ubuntu&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="css/IOD.css">
+</head>
+
+<body>
+  <div class="header">
+    <h1 id="heading">Nasa Image of the day</h1>
 
 
+  </div>
+
+  <div class="previous-day">
+    <form class="" action="/" method="post">
+
+      <label class="form-label label" for="date"> You can see previous image by select a date below</label>
+      <div class="input-div">
+        <input class="input form-control " type="date" name="date" min="1995-06-16" max=<%=currentDate%>>
+
       </div>
-      <div class="middile">
-        <h1 class='title'><%= picTitle %></h1>
-        <img class="image" src=<%=image%> alt="astronomical-image">
-        <div class="aboutImage">
-          <h2 class="about-heading"> Image explanation </h2>
-            <p class="about-text"><%= about%></p>
-        </div>
-      </div>
-  </body>
+      <button class="btn btn-primary" type="submit" name="button">Get Image</button>
+
+
+
+    </form>
+  </div>
+
+  <div class="middile-Container text-center">
+    <h1 class='title text-center'><%= picTitle %></h1>
+    <img class="image " src=<%=image%> alt="astronomical-image">
+    <div class="aboutImage">
+      <h2 class="about-heading"> Image explanation </h2>
+      <p class="about-text"><%= about%></p>
+    </div>
+  </div>
+</body>
+
 </html>
