add build command and note for responsiveness of site  view

--- a/views/IOD.ejs
+++ b/views/IOD.ejs
@@ -22,7 +22,6 @@
 
   <div class="previous-day">
     <form class="" action="/" method="post">
-
       <label class="form-label label" for="date"> You can see previous image by select a date below</label>
       <div class="input-div">
         <input class="input form-control " type="date" name="date" min="1995-06-16" max=<%=currentDate%>>
@@ -43,6 +42,7 @@
       <p class="about-text"><%= about%></p>
     </div>
   </div>
+  <label class="form-label label" for="date"> Note: This website is only for Desktop/Laptop view. </label>
 </body>
 
 </html>
